renamed courses to teaching

--- a/teaching/571_f19.html
+++ b/teaching/571_f19.html
@@ -35,7 +35,7 @@
             <a class="nav-link" href="../index.html#publications">Publications</a>
           </li>
           <li class="nav-item dropdown">
-            <a href="#" class="nav-link dropdown-toggle" role="button" data-toggle="dropdown">Courses</a>
+            <a href="#" class="nav-link dropdown-toggle" role="button" data-toggle="dropdown">Teaching</a>
             <div class="dropdown-menu">
               <a href="#" class="dropdown-item">CSE 571: Fall 2019</a>
               <a href="571_s19.html" class="dropdown-item">CSE 571: Spring 2019</a>
@@ -67,13 +67,13 @@
 
           <h3><ptitle>Instructor</ptitle></h3> 
           <h4>Prof. Siddharth Srivastava</h4>
-          <h4><ptitle>Office Hours</ptitle>&nbsp; &nbsp;  09:00 am - 10:00 am Tuesdays and Thursdays | BYENG 592  </h4>
+          <h4><ptitle>Office Hours</ptitle>&nbsp; &nbsp;  09:30 am - 10:30 am Tuesdays and Thursdays | BYENG 592  </h4>
           <h4><ptitle>Contact Details</ptitle>&nbsp; &nbsp; siddharths@asu.edu | BYENG 592  </h4>
           <br />
 
           <h3><ptitle>Teaching Assistant</ptitle></h3>
           <h4>Pulkit Verma</h4>
-          <h4><ptitle>TA Office Hours</ptitle>&nbsp; &nbsp; 10:30 am - 11:30 am  Mondays and Wednesdays | BYENG 221 (CIDSE TA Lab) </h4>
+          <h4><ptitle>TA Office Hours</ptitle>&nbsp; &nbsp; 11:00 am - 12:00 noon  Mondays and Wednesdays | BYENG 221 (CIDSE TA Lab) </h4>
           <h4><ptitle> TA Contact Details</ptitle>&nbsp; &nbsp; verma.pulkit@asu.edu </h4>
 
           <!--
