--- a/teaching/571_f19_hw/hw0.html
+++ b/teaching/571_f19_hw/hw0.html
@@ -258,24 +258,8 @@
           <b>Now you are ready for your first homework task.</b>
           <br /><br />
           
-          <h3>Task 1</h3>
-          <h5><b>[6 points]</b></h5>
-          For this task, you will load ‘Turtlebot3 House’ environment in Gazebo and use tele-operations to reach a particular location.
-          <br /><br />
-          Use last 2 digits of your ASU id to determine which loction you need to reach for your submission. For example, if your ASU id is 1234567890 then you will have to reach the location 9 + 0 = 9 in the last column of the grid as shown in the image below.<br /><br />
-          <div class="justify-content-center align-items-center" style="margin-bottom:25px; ">
-            <div class="justify-content-center align-items-center" style="margin:0 center;">
-              <img src="../../images/571/hw0_goal.jpg" alt="Homework0 Goal" class="card-img-bottom" style="max-width: 1000px">
-            </div>
-          <br />
-          You need to submit a pdf file with 5 top-view screen-shots which shows the intermediate as well as the final location of the Turtlebot3.
-          <br /><br />
-          <h3>Bonus Task</h3>
-          <h5><b>[2 points]</b></h5>
-          If you decide to use the world that we provide and solve above stated question using that environment, you will earn <b>2 extra bonus points</b>. The world file and material file are available here. You will need to add the material file in your <tt>~/.gazebo</tt> directory. You should also place the world file in Turtlebot3 Gazebo World directory as well as launch file in the <b>Launch</b> directory and make necessary changes as required.
-          <br /><br />
-          <h3>Submission Note</h3>
-          Please name your submission file using your first name, last name and ASU ID. Your filename should look like <tt>firstname_lastname_asuid.pdf</tt>. Also don’t forget to put your name and ASU ID in the report.
+          <h3>Tasks</h3>
+          Assignment tasks will be uploaded on August 22, 2019 after the class. 
           <br />
         </div>
       </div>
