--- a/teaching/591_s18.html
+++ b/teaching/591_s18.html
@@ -35,7 +35,7 @@
             <a class="nav-link" href="../index.html#publications">Publications</a>
           </li>
           <li class="nav-item dropdown">
-            <a href="#" class="nav-link dropdown-toggle" role="button" data-toggle="dropdown">Courses</a>
+            <a href="#" class="nav-link dropdown-toggle" role="button" data-toggle="dropdown">Teaching</a>
             <div class="dropdown-menu">
               <a href="571_f19.html" class="dropdown-item">CSE 571: Fall 2019</a>
               <a href="571_s19.html" class="dropdown-item">CSE 571: Spring 2019</a>
