--- a/icra14.html
+++ b/icra14.html
@@ -33,12 +33,12 @@
             <a class="nav-link" href="index.html#publications">Publications</a>
           </li>
           <li class="nav-item dropdown">
-                <a href="#" class="nav-link dropdown-toggle" role="button" data-toggle="dropdown">Courses</a>
+                <a href="#" class="nav-link dropdown-toggle" role="button" data-toggle="dropdown">Teaching</a>
                 <div class="dropdown-menu">
-                    <a href="courses/571_f19.html" class="dropdown-item">CSE 571: Fall 2019</a>
-                    <a href="courses/571_s19.html" class="dropdown-item">CSE 571: Spring 2019</a>
-                    <a href="courses/471_f18.html" class="dropdown-item">CSE 471: Fall 2018</a>
-                    <a href="courses/591_s18.html" class="dropdown-item">CSE 591: Spring 2018</a>
+                    <a href="teaching/571_f19.html" class="dropdown-item">CSE 571: Fall 2019</a>
+                    <a href="teaching/571_s19.html" class="dropdown-item">CSE 571: Spring 2019</a>
+                    <a href="teaching/471_f18.html" class="dropdown-item">CSE 471: Fall 2018</a>
+                    <a href="teaching/591_s18.html" class="dropdown-item">CSE 591: Spring 2018</a>
                 </div>
           </li>
           <li class="nav-item">
