--- a/teaching/571_f19.html
+++ b/teaching/571_f19.html
@@ -413,21 +413,20 @@
             </table>
           </div>
           <br>
-          <b>Note:</b> Final Exam will be on University's pre defined examination dates. Please check <a href="https://students.asu.edu/final-exam-schedule">University Exam Calendar </a> for more details
-          <br /><br />
+          <b>Note:</b> Final Exam will be on ASU's pre-defined examination dates. Please check <a href="https://students.asu.edu/final-exam-schedule">University Exam Calendar </a> for more details
+          <br/><br />
 
           <h3>Course format</h3>
           <p>
-            There will be regular meetings on Tuesdays and Thursdays (unless stated otherwise) covering fundamentals of AI. Programming assignments will be released bi-weekly. Homeworks will be assigned bi-weekly. Homeworks must be typeset using word processing software (E.g. Word or equivalent) and submitted before the due date indicated on the homework.  
-            <br />
-            There will be no groups for programming assignments and homeworks. Each student is required to submit their own work through canvas. Do not try to gain credit for someone else’s work.
-          </p>
+            There will be regular meetings on Tuesdays and Thursdays (unless stated otherwise). Students will be evaluated based homeworks including programming assignments, midterm and final exams, and in-class activity. </p>
+           
+           <p>Homeworks must be typeset using word processing software (e.g., Word, LaTex or equivalent) and submitted before the due date indicated on the homework. Homeworks submitted up to 48 hours after the due date will receive 30% of the scored credit; homeworks submitted more than 48 hours after the due date will not be graded. Homeworks and exams will be assigned to individuals (not groups); each student is required to submit his or her own original work through canvas.  </p>
           <b>Note:</b> Do not submit a scanned copy of the homework. Acceptable formats are: doc, docx or pdf.
           <br /><br />
 
           <h3>Prerequisites</h3>
           CSE 310<br>
-          Proficiency with the Python programming language.
+          Proficiency with the Python programming language and Linux-based programming environments.
           <br /><br />
 
           <h3>Resources</h3>
