--- a/teaching/571_f19.html
+++ b/teaching/571_f19.html
@@ -413,14 +413,14 @@
             </table>
           </div>
           <br>
-          <b>Note:</b> Final Exam will be on ASU's pre-defined examination dates. Please check <a href="https://students.asu.edu/final-exam-schedule">University Exam Calendar </a> for more details
+          <b>Note:</b> The final exam will be scheduled according to ASU's pre-defined examination dates. Please check the <a href="https://students.asu.edu/final-exam-schedule">University Exam Calendar </a> for more details.
           <br/><br />
 
           <h3>Course format</h3>
           <p>
-            There will be regular meetings on Tuesdays and Thursdays (unless stated otherwise). Students will be evaluated based homeworks including programming assignments, midterm and final exams, and in-class activity. </p>
+            There will be regular meetings on Tuesdays and Thursdays (unless stated otherwise). Students will be evaluated based on homeworks including programming assignments, midterm and final exams, and in-class activity. </p>
            
-           <p>Homeworks must be typeset using word processing software (e.g., Word, LaTex or equivalent) and submitted before the due date indicated on the homework. Homeworks submitted up to 48 hours after the due date will receive 30% of the scored credit; homeworks submitted more than 48 hours after the due date will not be graded. Homeworks and exams will be assigned to individuals (not groups); each student is required to submit his or her own original work through canvas.  </p>
+           <p>Homeworks must be typeset using word processing software (e.g., Word, LaTex or equivalent) and submitted before the due date indicated on the homework. Where applicable, students will also need to submit the source code for programming portions of homeworks.  Homeworks submitted up to 48 hours after the due date will receive 30% of the scored credit; homeworks submitted more than 48 hours after the due date will not be graded. Homeworks and exams will be assigned to individuals (not groups); each student is required to submit his or her own original work through canvas.  </p>
           <b>Note:</b> Do not submit a scanned copy of the homework. Acceptable formats are: doc, docx or pdf.
           <br /><br />
 
