--- a/teaching/571_f19.html
+++ b/teaching/571_f19.html
@@ -418,11 +418,13 @@
 
           <h3>Course format</h3>
           <p>
-            There will be regular meetings on Tuesdays and Thursdays (unless stated otherwise). Students will be evaluated based on homeworks including programming assignments, midterm and final exams, and in-class activity. </p>
+            There will be regular meetings on Tuesdays and Thursdays (unless stated otherwise). Students will be evaluated based on homeworks including programming assignments, midterm and final exams, in-class activity and projects. </p>
            
            <p>Homeworks must be typeset using word processing software (e.g., Word, LaTex or equivalent) and submitted before the due date indicated on the homework. Where applicable, students will also need to submit the source code for programming portions of homeworks.  Homeworks submitted up to 48 hours after the due date will receive 30% of the scored credit; homeworks submitted more than 48 hours after the due date will not be graded. Homeworks and exams will be assigned to individuals (not groups); each student is required to submit his or her own original work through canvas.  </p>
-          <b>Note:</b> Do not submit a scanned copy of the homework. Acceptable formats are: doc, docx or pdf.
-          <br /><br />
+          <b>Note:</b> Do not submit a scanned copy for any of the homeworks. Acceptable formats are: doc, docx or pdf.
+          <br />
+         
+         <br />
 
           <h3>Prerequisites</h3>
           CSE 310<br>
