updated mid-term format and changed TA hours for Fall 2019

--- a/teaching/571_f19.html
+++ b/teaching/571_f19.html
@@ -73,7 +73,7 @@
 
           <h3><ptitle>Teaching Assistant</ptitle></h3>
           <h4>Pulkit Verma</h4>
-          <h4><ptitle>TA Office Hours</ptitle>&nbsp; &nbsp; 11:00 am - 12:00 noon  Mondays and Wednesdays | BYENG 221 (CIDSE TA Lab) </h4>
+          <h4><ptitle>TA Office Hours</ptitle>&nbsp; &nbsp; 11:00 am - 12:00 noon Mondays and Fridays | BYENG 221 (CIDSE TA Lab) </h4>
           <h4><ptitle> TA Contact Details</ptitle>&nbsp; &nbsp; verma.pulkit@asu.edu </h4>
 
           <!--
@@ -243,8 +243,8 @@
                 <tr>
                   <td><left>14</left></td>
                   <td><left>Tue Oct 8</left></td>
-                  <td><left>Take-home MID-TERM</left></td>
-                  <td><left></left></td>
+                  <td><left>Markov Decision Processes 2</left></td>
+                  <td><left>17.1-17.3</left></td>
                   <td></td>
                   <td></td>
                   <td></td>
@@ -253,7 +253,7 @@
                 <tr>
                   <td><left>15</left></td>
                   <td><left>Thu Oct 10</left></td>
-                  <td><left>MID-TERM due</left></td>
+                  <td><left>In-class MID-TERM</left></td>
                   <td><left></left></td>
                   <td></td>
                   <td></td>
@@ -263,7 +263,7 @@
                 <tr>
                   <td><left>16</left></td>
                   <td><left>Thu Oct 17</left></td>
-                  <td><left>Markov Decision Processes 2</left></td>
+                  <td><left>Markov Decision Processes 3</left></td>
                   <td><left>17.1-17.3</left></td>
                   <td></td>
                   <td></td>
@@ -273,7 +273,7 @@
                 <tr>
                   <td><left>17</left></td>
                   <td><left>Tue Oct 22</left></td>
-                  <td><left>Markov Decision Processes 3</left></td>
+                  <td><left>Markov Decision Processes 4</left></td>
                   <td><left>17.1-17.3</left></td>
                   <td></td>
                   <td></td>
