Updated Fall 2019 schedule + minor fixes

--- a/teaching/571_f19.html
+++ b/teaching/571_f19.html
@@ -133,8 +133,8 @@
                 <tr>
                   <td><left>3</left></td>
                   <td><left>Thu Aug 29</left></td>
-                  <td><left>Search: Uninformed</left></td>
-                  <td><left>3.1-3.4</left></td>
+                  <td><left>ROS Tutorial</left></td>
+                  <td><left></left></td>
                   <td></td>
                   <td></td>
                   <td></td>
@@ -143,8 +143,8 @@
                 <tr>
                   <td><left>4</left></td>
                   <td><left>Tue Sep 3</left></td>
-                  <td><left>Search: Informed</left></td>
-                  <td><left>3.5-3.6</left></td>
+                  <td><left>Search: Uninformed</left></td>
+                  <td><left>3.1-3.4</left></td>
                   <td></td>
                   <td><center>Homework 0</center></td>
                   <td></td>
@@ -153,8 +153,8 @@
                 <tr>
                   <td><left>5</left></td>
                   <td><left>Thu Sep 5</left></td>
-                  <td><left>Constraint Satisfaction Problems</left></td>
-                  <td><left>6.1-6.5</left></td>
+                  <td><left>Search: Informed</left></td>
+                  <td><left>3.5-3.6</left></td>
                   <td></td>
                   <td></td>
                   <td></td>
@@ -163,8 +163,8 @@
                 <tr>
                   <td><left>6</left></td>
                   <td><left>Tue Sep 10</left></td>
-                  <td><left>Representation and Modeling in AI</left></td>
-                  <td><left></left></td>
+                  <td><left>Constraint Satisfaction Problems</left></td>
+                  <td><left>6.1-6.5</left></td>
                   <td></td>
                   <td></td>
                   <td></td>
@@ -173,8 +173,8 @@
                 <tr>
                   <td><left>7</left></td>
                   <td><left>Thu Sep 12</left></td>
-                  <td><left>Tutorial: PDDL Planning</left></td>
-                  <td><left>10.1-10.3</left></td>
+                  <td><left>Representation and Modeling in AI</left></td>
+                  <td><left></left></td>
                   <td></td>
                   <td></td>
                   <td></td>
@@ -183,7 +183,7 @@
                 <tr>
                   <td><left>8</left></td>
                   <td><left>Tue Sep 17</left></td>
-                  <td><left>Planning in Deterministic Environments 1</left></td>
+                  <td><left>Tutorial: PDDL Planning</left></td>
                   <td><left>10.1-10.3</left></td>
                   <td><left></left></td>
                   <td></td>
@@ -193,7 +193,7 @@
                 <tr>
                   <td><left>9</left></td>
                   <td><left>Thu Sep 19</left></td>
-                  <td><left>Planning in Deterministic Environments 2</left></td>
+                  <td><left>Planning in Deterministic Environments 1</left></td>
                   <td><left>10.1-10.3</left></td>
                   <td></td>
                   <td></td>
@@ -203,8 +203,8 @@
                 <tr>
                   <td><left>10</left></td>
                   <td><left>Tue Sep 24</left></td>
-                  <td><left>Partial Observability</left></td>
-                  <td><left>13.1-13.5</left></td>
+                  <td><left>Planning in Deterministic Environments 2</left></td>
+                  <td><left>10.1-10.3</left></td>
                   <td></td>
                   <td></td>
                   <td></td>
@@ -213,8 +213,8 @@
                 <tr>
                   <td><left>11</left></td>
                   <td><left>Thu Sep 26</left></td>
-                  <td><left>Probabilistic Inference 1</left></td>
-                  <td><left>14.1-14.4</left></td>
+                  <td><left>Partial Observability</left></td>
+                  <td><left>13.1-13.5</left></td>
                   <td></td>
                   <td></td>
                   <td></td>
@@ -223,8 +223,8 @@
                 <tr>
                   <td><left>12</left></td>
                   <td><left>Tue Oct 1</left></td>
-                  <td><left>Probabilistic Inference 2</left></td>
-                  <td><left>14.4-14.5</left></td>
+                  <td><left>Probabilistic Inference 1</left></td>
+                  <td><left>14.1-14.4</left></td>
                   <td><left></left></td>
                   <td></td>
                   <td></td>
@@ -233,8 +233,8 @@
                 <tr>
                   <td><left>13</left></td>
                   <td><left>Thu Oct 3</left></td>
-                  <td><left>Markov Decision Processes 1</left></td>
-                  <td><left>17.1-17.3</left></td>
+                  <td><left>Probabilistic Inference 2</left></td>
+                  <td><left>14.4-14.5</left></td>
                   <td></td>
                   <td></td>
                   <td></td>
@@ -243,7 +243,7 @@
                 <tr>
                   <td><left>14</left></td>
                   <td><left>Tue Oct 8</left></td>
-                  <td><left>Markov Decision Processes 2</left></td>
+                  <td><left>Markov Decision Processes 1</left></td>
                   <td><left>17.1-17.3</left></td>
                   <td></td>
                   <td></td>
@@ -263,7 +263,7 @@
                 <tr>
                   <td><left>16</left></td>
                   <td><left>Thu Oct 17</left></td>
-                  <td><left>Markov Decision Processes 3</left></td>
+                  <td><left>Markov Decision Processes 2</left></td>
                   <td><left>17.1-17.3</left></td>
                   <td></td>
                   <td></td>
@@ -273,7 +273,7 @@
                 <tr>
                   <td><left>17</left></td>
                   <td><left>Tue Oct 22</left></td>
-                  <td><left>Markov Decision Processes 4</left></td>
+                  <td><left>Markov Decision Processes 3</left></td>
                   <td><left>17.1-17.3</left></td>
                   <td></td>
                   <td></td>
@@ -403,7 +403,7 @@
                 <tr>
                   <td><left>30</left></td>
                   <td><left>Tue Dec 10</left></td>
-                  <td><left>FINAL EXAM - Tentative (02:30 - 04:30 PM)</left></td>
+                  <td><left>FINAL EXAM - Tentative (02:30 PM - 04:20 PM)</left></td>
                   <td><left></left></td>
                   <td></td>
                   <td></td>
@@ -428,7 +428,7 @@
 
           <h3>Prerequisites</h3>
           CSE 310<br>
-          Proficiency with the Python programming language and Linux-based programming environments.
+          Proficiency with the Python programming language on Ubuntu.
           <br /><br />
 
           <h3>Resources</h3>
