--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                                                				     <!--First Row-->
           <div class="container-fluid"> 
             <div class="row" >
-              <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12 mx-0 px-0"  style="margin-bottom:25px; ">
+              <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12 mx-0 px-0">
                 <div class="card rcard mx-2">
                   <div class="card-body">
                     <h4 class="card-title">Planning and Reasoning Under Uncertainty</h4>
@@ -177,7 +177,7 @@
                     <div class="col mx-0 px-0">
                       <div class="card feedcard mx-1" >
                         <div class="card-body" >
-                          <a class="twitter-timeline" data-width="100%" data-height="100%" data-theme="light" href="https://twitter.com/AAIRLabASU">Tweets by AAIRLabASU</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                           <a class="twitter-timeline" data-width="100%" data-height="100%" data-theme="light" href="https://twitter.com/AAIRLabASU">Tweets by AAIRLabASU</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                         </div>
                       </div>
                     </div>
