added VM importing tutorial, added VM link, removed twitter box fix

--- a/teaching/571_f19.html
+++ b/teaching/571_f19.html
@@ -75,12 +75,11 @@
           <h4>Pulkit Verma</h4>
           <h4><ptitle>TA Office Hours</ptitle>&nbsp; &nbsp; 11:00 am - 12:00 noon Mondays and Fridays | BYENG 221 (CIDSE TA Lab) </h4>
           <h4><ptitle> TA Contact Details</ptitle>&nbsp; &nbsp; verma.pulkit@asu.edu </h4>
+          <br />
 
-          <!--
           <h3><ptitle>Graders</ptitle></h3>
-          <h4>Chirav Dave (cdave1@asu.edu)</h4>
-          <h4>Midhun Madhusoodanan (mpookkot@asu.edu)</h4>
-          -->
+          <h4>Abhyudaya Srinet (asrinet1@asu.edu)</h4>
+          
           <br />
 
           <h3>Overview</h3> 
