--- a/teaching/571_f19_hw/hw0.html
+++ b/teaching/571_f19_hw/hw0.html
@@ -84,7 +84,12 @@
                     <li><a href="https://docs.oracle.com/cd/E26217_01/E26796/html/qs-create-vm.html" target="_blank">How to create a new VM?</a></li>
                     <li><a href="https://docs.oracle.com/cd/E26217_01/E26796/html/qs-import-vm.html" target="_blank">How to import an existing VM?</a></li>
                   </ol>
-                  We recommend installing Ubuntu on your system (this can be done alongside Windows) as running virtual machine is generally slower than using Ubuntu installed on your system.
+                  We recommend installing Ubuntu on your system (this can be done alongside Windows) as running virtual machine is generally slower than using Ubuntu installed on your system. 
+                  <br/><br/>
+                  <h5>Virtual Machine Image</h5>
+                  If installing Ubuntu is not an option for you, or you have trouble installing it, we are providing the <a href="https://drive.google.com/drive/folders/1tVMBsR70gQSbthKH69HvEORX3ZjlQThI?usp=sharing">Virtual Machine Image</a> which can be imported directly to Virtualbox or VMWare Workstation. You have to use your ASUrite credentials to access the image. Please use your <b>ASU email</b> when prompted for email.
+                  <br/><br/>
+                  Tutorial for importing the image can be found here: <a href="./vm_import.html">Importing the VM</a>
                 </li>
               </ol>
               <br />
@@ -259,7 +264,7 @@
           <br /><br />
           
           <h3>Tasks</h3>
-          Assignment tasks will be uploaded on August 22, 2019 after the class. 
+          Assignment tasks will be uploaded on <a href="https://canvas.asu.edu/">ASU Canvas</a> on August 22, 2019 after the class. 
           <br />
         </div>
       </div>
