Added VMware links

--- a/teaching/571_f19_hw/hw0.html
+++ b/teaching/571_f19_hw/hw0.html
@@ -86,8 +86,16 @@
                   </ol>
                   We recommend installing Ubuntu on your system (this can be done alongside Windows) as running virtual machine is generally slower than using Ubuntu installed on your system. 
                   <br/><br/>
+                  <h5>Supported Virtual Machine Softwares (Hypervisors)</h5>
+                  <ul type="i">
+                    <li><b>VMware Workstation Pro</b> (Linux/Windows) license is available to ASU students for free for one year. It can be downloaded here: <a href="https://ets.engineering.asu.edu/vmware/">https://ets.engineering.asu.edu/vmware/</a></li>
+                    <li><b>VMware Fusion Pro</b> (Mac) license is available to ASU students for free for one year. It can be downloaded here: <a href="https://ets.engineering.asu.edu/vmware/">https://ets.engineering.asu.edu/vmware/</a></li>
+                    <li><b>Oracle VM VirtualBox</b> is freely available here: <a href="https://www.virtualbox.org/wiki/Downloads">https://www.virtualbox.org/wiki/Downloads</a></li>
+                    <li><b>VMware Workstation Player</b> (Linux/Windows) is freely available here: <a href="https://www.vmware.com/products/workstation-player/workstation-player-evaluation.html">https://www.vmware.com/products/workstation-player/workstation-player-evaluation.html</a>. Licensed version is available to ASU students for one year at <a href="https://ets.engineering.asu.edu/vmware/">https://ets.engineering.asu.edu/vmware/</a>.</li>
+                  </ul>
+                  <br/>
                   <h5>Virtual Machine Image</h5>
-                  If installing Ubuntu is not an option for you, or you have trouble installing it, we are providing the <a href="https://drive.google.com/drive/folders/1tVMBsR70gQSbthKH69HvEORX3ZjlQThI?usp=sharing">Virtual Machine Image</a> which can be imported directly to Virtualbox or VMWare Workstation. You have to use your ASUrite credentials to access the image. Please use your <b>ASU email</b> when prompted for email.
+                  If installing Ubuntu is not an option for you, or you have trouble installing it, we are providing the <a href="https://drive.google.com/drive/folders/1tVMBsR70gQSbthKH69HvEORX3ZjlQThI?usp=sharing">Virtual Machine Image</a> which can be imported directly to Virtualbox or VMware Workstation/Fusion. You have to use your ASUrite credentials to access the image. Please use your <b>ASU email</b> when prompted for email.
                   <br/><br/>
                   Tutorial for importing the image can be found here: <a href="./vm_import.html">Importing the VM</a>
                 </li>
@@ -264,7 +272,7 @@
           <br /><br />
           
           <h3>Tasks</h3>
-          Assignment tasks will be uploaded on <a href="https://canvas.asu.edu/">ASU Canvas</a> on August 22, 2019 after the class. 
+          Assignment tasks are available at <a href="https://canvas.asu.edu/">ASU Canvas</a> for the students registered in this course. 
           <br />
         </div>
       </div>
