--- a/teaching/571_f19_hw/vm_import.html
+++ b/teaching/571_f19_hw/vm_import.html
@@ -131,8 +131,8 @@
 
           <br /><br /><br />
           
-          <h3>VMWare Workstation Pro/Player</h3>
-          The screenshots below correspond to VMWare Workstation Pro. Since both VMWare Workstation Player and VMWare Workstation Player have similar options, you can use these steps on VMWare Workstation Player too.
+          <h3>VMware Workstation Pro/Player or VMware Fusion Pro</h3>
+          The screenshots below correspond to VMware Workstation Pro. Since both VMware Workstation Pro/Player and VMware Fusion Pro have similar options, you can use these steps on VMware Workstation Player  and VMware Fusion Pro too.
           <br />
           <br />
           <ol>
