Added Homework 1 Timelines

--- a/teaching/571_f19.html
+++ b/teaching/571_f19.html
@@ -164,7 +164,7 @@
                   <td><left>Tue Sep 10</left></td>
                   <td><left>Constraint Satisfaction Problems</left></td>
                   <td><left>6.1-6.5</left></td>
-                  <td></td>
+                  <td><center>Homework 1</center></td>
                   <td></td>
                   <td></td>
                 </tr>
@@ -205,7 +205,7 @@
                   <td><left>Planning in Deterministic Environments 2</left></td>
                   <td><left>10.1-10.3</left></td>
                   <td></td>
-                  <td></td>
+                  <td><center>Homework 1</center></td>
                   <td></td>
                 </tr>
 
