--- a/ll.html
+++ b/ll.html
@@ -59,6 +59,7 @@
         <div class="publications"  id="publications">
           <h2>Learn and Link: A Learning-Amenable Planning Paradigm</h2><br>
           <h3>Daniel Molina, Kislay Kumar, Siddharth Srivastava</h3><br>
+          <h4>[Submitted, IEEE Conference on Robotics and Automation (ICRA), 2020]</h4><br>
 
           <b><a href="ll_planners/ll_full_version.pdf">Full version</a></b><br>
           <b>Source code</b><br>
