Updated funding agencies' logos

--- a/index.html
+++ b/index.html
@@ -193,10 +193,10 @@
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mx-0 px-0">
                   <div class="funding-logos">
                     &nbsp; &nbsp;
-                    <a href="https://www.darpa.mil/" target="_blank" ><img src="images/darpa.png" height="100" alt="DARPA logo"></a>
-                    &nbsp; &nbsp;
-                    &nbsp; &nbsp;
                     <a href="https://www.nsf.gov/" target="_blank"><img src="images/nsf.png" height="100" alt="NSF logo"></a>
+                    &nbsp; &nbsp;
+                    &nbsp; &nbsp;
+                    <a href="https://www.onr.navy.mil/ " target="_blank" ><img src="images/onr.png" height="100" alt="ONR logo"></a>
                     &nbsp; &nbsp;
                   </div>
                 </div>
