Made change in schedule

--- a/teaching/571_f19.html
+++ b/teaching/571_f19.html
@@ -172,8 +172,8 @@
                 <tr>
                   <td><left>7</left></td>
                   <td><left>Thu Sep 12</left></td>
-                  <td><left>Representation and Modeling in AI</left></td>
-                  <td><left></left></td>
+                  <td><left>Tutorial: CSP and PDDL Planning</left></td>
+                  <td><left>10.1-10.3</left></td>
                   <td></td>
                   <td></td>
                   <td></td>
@@ -182,8 +182,8 @@
                 <tr>
                   <td><left>8</left></td>
                   <td><left>Tue Sep 17</left></td>
-                  <td><left>Tutorial: PDDL Planning</left></td>
-                  <td><left>10.1-10.3</left></td>
+                  <td><left>Representation and Modeling in AI</left></td>
+                  <td><left></left></td>
                   <td><left></left></td>
                   <td></td>
                   <td></td>
