--- a/atam_full.html
+++ b/atam_full.html
@@ -62,7 +62,7 @@
           <h4>[Submitted, IEEE Conference on Robotics and Automation (ICRA), 2020]</h4><br>
 
 
-          <b><a href="atam/atam_full_version.pdf">Full version</a></b><br>
+          <b><a href="atam/atam_full_version.pdf">Full version of the submitted paper</a></b><br>
           <b><a href="https://github.com/AAIR-lab/Anytime-Task-and-Motion-Policies" target="_blank">Source code</a></b><br>
           <br>
 
