--- a/icra14.html
+++ b/icra14.html
@@ -89,14 +89,14 @@
 
           Our system computes a solution for retrieving the object without moving the outer object. <br/ ><br/ >
 
-          <iframe width="420" height="315" src="http://www.youtube.com/embed/ycdc_aVQErY?autoplay=0" frameborder="0" allowfullscreen></iframe><br>
+          <iframe width="420" height="315" src="https://www.youtube.com/embed/ycdc_aVQErY?autoplay=0" frameborder="0" allowfullscreen></iframe><br>
   
           <br>
           <em>Case 2:</em> The object is too far inside the drawer. <br>
 
           Our system computes a solution that first picks up the outer
           object, then opens the drawer and retrieves the object inside.<br/ ><br/ >
-          <iframe width="420" height="315" src="http://www.youtube.com/embed/p5XEwHM4TzE?autoplay=0" frameborder="0" allowfullscreen></iframe>
+          <iframe width="420" height="315" src="https://www.youtube.com/embed/p5XEwHM4TzE?autoplay=0" frameborder="0" allowfullscreen></iframe>
           <br/ ><br/ >
 
           <h4>Cluttered Table</h4>
@@ -109,7 +109,7 @@
 
           Our system computes a solution that picks and repositions several objects before grasping the target object.<br/ ><br/ >
 
-          <iframe width="420" height="315" src="http://www.youtube.com/embed/7DUw5L5bx7s?autoplay=0" frameborder="0" allowfullscreen></iframe>
+          <iframe width="420" height="315" src="https://www.youtube.com/embed/7DUw5L5bx7s?autoplay=0" frameborder="0" allowfullscreen></iframe>
 
           <br/ ><br/ >
 
@@ -132,12 +132,12 @@
           <br/ >
 
           <h4>Dinner Layout in Simulation</h4><br/ >
-          <iframe width="420" height="315" src="http://www.youtube.com/embed/hqaKlD40jw8?autoplay=0" frameborder="0" allowfullscreen></iframe><br><br/ ><br/ >
+          <iframe width="420" height="315" src="https://www.youtube.com/embed/hqaKlD40jw8?autoplay=0" frameborder="0" allowfullscreen></iframe><br><br/ ><br/ >
 
           <h4>The Real PR2 Solving the Dinner Layout Task</h4>
           <br/ >
           <!-- <iframe width="420" height="315" src="http://www.youtube.com/embed/ys5xTnUMXvI?autoplay=0" frameborder="0" allowfullscreen></iframe> -->
-          <iframe width="420" height="315" src="http://www.youtube.com/embed/M3xrn9FskjA" frameborder="0" allowfullscreen></iframe>
+          <iframe width="420" height="315" src="https://www.youtube.com/embed/M3xrn9FskjA" frameborder="0" allowfullscreen></iframe>
           <br><br><br>
 
           <a name="bib"></a>
